crates/fundle/tests/proc/bundle_enum.stderr
error: fundle::bundle can only be applied to structs
 --> tests/proc/bundle_enum.rs:3:1
  |
3 | enum Foo {}
  | ^^^^^^^^^^^
