crates/fundle/tests/proc/bundle_enum.rs

#[fundle::bundle]
enum Foo {}

fn main() {}
